--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,7 @@ jobs:
       uses: actions/setup-node@v6
       with:
         node-version-file: src/Umbraco.Community.Contentment.Client/.nvmrc
-        cache: npm
-        cache-dependency-path: src/Umbraco.Community.Contentment.Client/package-lock.json
-    - run: npm ci --no-audit --no-fund --prefer-offline
+    - run: npm i
     - run: npm run build
 
     - name: Setup .NET
