Updates uSync files

--- a/src/_uSync/Shared/Content/editor-notes.config
+++ b/src/_uSync/Shared/Content/editor-notes.config
@@ -19,6 +19,9 @@
     <editorNotesDefault>
       <Value><![CDATA[]]></Value>
     </editorNotesDefault>
+    <editorNotesInfo>
+      <Value><![CDATA[]]></Value>
+    </editorNotesInfo>
     <editorNotesPositive>
       <Value><![CDATA[]]></Value>
     </editorNotesPositive>
