--- a/src/_uSync/Shared/ContentTypes/contentmenteditornoteselement.config
+++ b/src/_uSync/Shared/ContentTypes/contentmenteditornoteselement.config
@@ -30,7 +30,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>40</SortOrder>
+      <SortOrder>50</SortOrder>
       <Tab Alias="editorNotes">Editor Notes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -54,6 +54,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>5ba10b1c-7fb0-4d1d-a2ff-3d885ef92367</Key>
+      <Name>Editor Notes: Info</Name>
+      <Alias>editorNotesInfo</Alias>
+      <Definition>807a492e-1667-4801-ab95-e9081a1d9114</Definition>
+      <Type>Umbraco.Community.Contentment.Notes</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="editorNotes">Editor Notes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>4e639ac8-e317-4a77-b714-f7312e61ba63</Key>
       <Name>Editor Notes: Positive</Name>
       <Alias>editorNotesPositive</Alias>
@@ -62,7 +78,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>20</SortOrder>
+      <SortOrder>30</SortOrder>
       <Tab Alias="editorNotes">Editor Notes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -78,7 +94,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>30</SortOrder>
+      <SortOrder>40</SortOrder>
       <Tab Alias="editorNotes">Editor Notes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
