--- a/src/_uSync/Shared/DataTypes/DataListListEditorTemplatedList.config
+++ b/src/_uSync/Shared/DataTypes/DataListListEditorTemplatedList.config
@@ -41,7 +41,7 @@
         "orientation": "horizontal",
         "allowClear": true,
         "enableMultiple": true,
-        "template": "\u003Ccontentment-info-box\r\n  type=\u0022transparent\u0022\r\n  icon=\u0022{{ item.icon }}\u0022\r\n  message=\u0022{{ item.name }}\u0022\u003E\r\n\u003C/contentment-info-box\u003E\r\n"
+        "template": "\u003Ccontentment-info-box\r\n  type=\u0022transparent\u0022\r\n  icon=\u0022{{ item.icon }}\u0022\r\n  headline=\u0022{{ item.name }}\u0022\r\n  message=\u0022{{ item.description }}\u0022\u003E\r\n\u003C/contentment-info-box\u003E\r\n"
       }
     }
   ]
