--- a/src/_uSync/Shared/DataTypes/EditorNotesInfo.config
+++ b/src/_uSync/Shared/DataTypes/EditorNotesInfo.config
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="569416cf-60c4-483a-a117-8ea8ad4bc055" Alias="Editor Notes: Default" Level="2">
+<DataType Key="807a492e-1667-4801-ab95-e9081a1d9114" Alias="Editor Notes: Info" Level="2">
   <Info>
-    <Name>Editor Notes: Default</Name>
+    <Name>Editor Notes: Info</Name>
     <EditorAlias>Umbraco.Community.Contentment.Notes</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.EditorNotes</EditorUIAlias>
     <Folder>Editor+Notes</Folder>
   </Info>
   <Config><![CDATA[{
-  "alertType": "default",
-  "heading": "Default note",
+  "alertType": "info",
+  "heading": "Info",
   "hideLabel": false,
   "hidePropertyGroup": false,
-  "icon": "icon-handshake color-undefined",
+  "icon": "icon-info color-undefined",
   "message": {
-    "markup": "\u003Cp\u003EThis is a default message for the editor.\u003C/p\u003E",
+    "markup": "\u003Cp\u003EThis is an info message for the editor.\u003C/p\u003E",
     "blocks": {
       "layout": {},
       "contentData": [],
